...
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/test_note_title"
        app:layout_constraintStart_toStartOf="@+id/test_note_title"
        app:layout_constraintTop_toBottomOf="@+id/test_note_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_note_floating_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
